# ingestion

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/utils/: __init__.py  color_embed.py  models.py  steam_fetcher.py
